# Blue

./: .gitmodules
blue_ws/src/blue_navigation/: CMakeLists.txt  package.xml
blue_ws/src/blue_navigation/launch/: blue_configuration.launch  move_base.launch
blue_ws/src/blue_navigation/params/costmap/: costmap_common_params.yaml
blue_ws/src/blue_odometry/: CMakeLists.txt  package.xml
blue_ws/src/blue_odometry/src/: odometry.py  odometry2.py  odometry3.py
blue_ws/src/blue_skid_steering/: CMakeLists.txt  package.xml
blue_ws/src/blue_skid_steering/launch/: blue_drive.launch
blue_ws/src/blue_skid_steering/src/: path_following_service.py  skid_steering_subscriber.py  turn.py
blue_ws/src/blue_skid_steering/srv/: PathSrv.srv  SkidSteer.srv
blue_ws/src/blue_tf_broadcaster/: CMakeLists.txt  package.xml
blue_ws/src/blue_tf_broadcaster/src/: tf_broadcaster.cpp
blue_ws/src/nov4demo/: CMakeLists.txt  package.xml
blue_ws/src/nov4demo/src/: nov4map.cpp  nov4map2.cpp
blue_ws/src/pointcloud_smasher/: CMakeLists.txt  package.xml
blue_ws/src/pointcloud_smasher/launch/: pointcloud_smasher.launch
blue_ws/src/pointcloud_smasher/src/: pointcloud_smasher.cpp
blue_ws/src/skid_steering/: CMakeLists.txt  package.xml
blue_ws/src/skid_steering/src/: skid_steering_node.py  skid_steering_service.py  skid_steering_subscriber.py
blue_ws/src/skid_steering/src/roboclaw/: roboclaw.py
blue_ws/src/skid_steering/srv/: SkidSteer.srv
config/camera/: config.yaml
setup/: 10-blue.rules  install.sh
