<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_smasher</name>
  <version>0.1.0</version>
  <description>The pointcloud_smasher package</description>

  <maintainer email="nkhera@andrew.cmu.edu">Neil Khera</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
</package>
